# ThinkFinger

./: AUTHORS  ChangeLog  INSTALL  INSTALL.in  INSTALL.svn  Makefile.am  NEWS  README  README.in  autogen.sh  configure.in
docs/: Makefile.am  pam_thinkfinger.8  tf-tool.1
docs/autodocs/: Doxyfile  Makefile.am
libthinkfinger/: Makefile.am  libthinkfinger-crc.c  libthinkfinger-crc.h  libthinkfinger.c  libthinkfinger.h  libthinkfinger.pc.in
pam/: Makefile.am  pam_thinkfinger-compat.c  pam_thinkfinger-compat.h  pam_thinkfinger-uinput.c  pam_thinkfinger-uinput.h  pam_thinkfinger.c
tf-init/: Makefile.am  tf-init.c
tf-tool/: Makefile.am  tf-tool.c  tf-tool_completion
